snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.jar.sha512
d51ea2f02c790705a4e50b05af24a8156001b9083c18c3c7e962158d1b72d3ad6764520e3d4ebd9c03b08042aee018452e62b25d3c7f18f4cf3ffaadc07f0c64